objects/ASI_CRM_Call_Log__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_AccountsAdditionalField__c</fullName>
        <label>Account</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipName>ASI_CRM_Call_plan_tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Assortment_Display_Check__c</fullName>
        <label>Assortment and Display Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Business_Development__c</fullName>
        <label>Business Development Discussion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Number_of_Call_Log__c</fullName>
        <formula>IF( RecordType.Name &lt;&gt; &quot;Plan (CN)&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Call Log</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Number_of_Call_Plan__c</fullName>
        <formula>IF( RecordType.Name = &quot;Plan (CN)&quot;, 1, Null)</formula>
        <label>Number of Call Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Call_Log_Summary__c</fullName>
        <label>Call Log Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Comment_Product_display__c</fullName>
        <description>Product  assortment and display comment</description>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_Negotiation__c</fullName>
        <label>Contract Negotiation/Payment Discussion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Created_from__c</fullName>
        <label>Created from</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Bespoke</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Creation_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <label>Creation Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Daily_Business__c</fullName>
        <label>Chat with Staff/Owner for Info. Sharing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Data_Quality_Check__c</fullName>
        <label>Data Accuracy &amp; Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Discuss_Business__c</fullName>
        <label>Contract/Target/Promotion Negotiation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Discuss_Competitor_Product__c</fullName>
        <label>Competitor/Beer Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Display_Image_Check__c</fullName>
        <label>Display and Image Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Due_Date__c</fullName>
        <description>update to task - homepage component</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Follow_up__c</fullName>
        <label>Follow-up Task</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GMA_CHECK__c</fullName>
        <label>Counterfeit/GMA Detection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_GPS_Info__c</fullName>
        <inlineHelpText>Latitude : 纬度
Longitude : 经度</inlineHelpText>
        <label>GPS Info</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Payment__c</fullName>
        <label>Incentive Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Inventory_IN_Out_Check__c</fullName>
        <label>Volume Performance Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Is_Draft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Local_Update_Time__c</fullName>
        <label>Local Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake_Check__c</fullName>
        <label>Off-Take Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Others__c</fullName>
        <label>Other Matters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PromotionEvent1ExecutionFeedback__c</fullName>
        <label>Promotion/Event 1 Execution &amp; Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_PromotionEvent2ExecutionFeedback__c</fullName>
        <label>Promotion/Event 2 Execution &amp; Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Event_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion/Event 1</label>
        <referenceTo>ASI_CRM_KA_Event__c</referenceTo>
        <relationshipLabel>Call Logs</relationshipLabel>
        <relationshipName>Call_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Event_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion/Event 2</label>
        <referenceTo>ASI_CRM_KA_Event__c</referenceTo>
        <relationshipLabel>Call Logs (Promotion/Event 2)</relationshipLabel>
        <relationshipName>Call_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Execute_feedback__c</fullName>
        <label>Promotion/Event Execution &amp; Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Preparation__c</fullName>
        <label>Promotion Preparation &amp; Negotiation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_RSP_Check__c</fullName>
        <label>Price Lists/Menu Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_RSP_Gap__c</fullName>
        <label>RSP Gap</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Retail_Selling_Price__c</fullName>
        <label>Retail Selling Price Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Stock_Check__c</fullName>
        <label>Stock Room Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Suggest_To_Order__c</fullName>
        <label>Suggest To Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visit_Date__c</fullName>
        <label>Visit Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Call Log</label>
    <listViews>
        <fullName>ASI_CRM_CN_Call_log</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_AccountsAdditionalField__c</columns>
        <columns>ASI_CRM_Visit_Date__c</columns>
        <columns>ASI_CRM_Follow_up__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_CRM_Local_Update_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Call_Log__c.ASI_CRM_CallLog_CN_WS,ASI_CRM_Call_Log__c.ASI_CRM_CallLog_CN_ON,ASI_CRM_Call_Log__c.ASI_CRM_CallLog_CN_OFF</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>My Call Log (CN) Last Week</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_AccountsAdditionalField__c</columns>
        <columns>ASI_CRM_Visit_Date__c</columns>
        <columns>ASI_CRM_Follow_up__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Call_Log_CN2</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_AccountsAdditionalField__c</columns>
        <columns>ASI_CRM_Visit_Date__c</columns>
        <columns>ASI_CRM_Follow_up__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_CRM_Local_Update_Time__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Call_Log__c.ASI_CRM_CallLog_CN_WS,ASI_CRM_Call_Log__c.ASI_CRM_CallLog_CN_ON,ASI_CRM_Call_Log__c.ASI_CRM_CallLog_CN_OFF</value>
        </filters>
        <label>My Call Log (CN)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CL-{00000000}</displayFormat>
        <label>Call Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Logs</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_MOT</fullName>
        <active>true</active>
        <label>MOT (CN)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CallLog_CN_OFF</fullName>
        <active>true</active>
        <label>Off (CN)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CallLog_CN_ON</fullName>
        <active>true</active>
        <label>On (CN)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CallLog_CN_WS</fullName>
        <active>true</active>
        <label>Wholesaler (CN)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_CN_Due_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR (ASI_CRM_Due_Date__c  &lt;  ASI_CRM_Visit_Date__c,
ASI_CRM_Due_Date__c  &lt; DATEVALUE(CreatedDate) )</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Due_Date__c</errorDisplayField>
        <errorMessage>截止日期不能是过去日期.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_CN_Visit_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_CRM_Visit_Date__c &gt;  TODAY()</errorConditionFormula>
        <errorMessage>Visit Date CANNOT be greater than Today.</errorMessage>
    </validationRules>
</CustomObject>